# crop-yield-disease-diagnosis-agent-skill

./: .gitignore  CLAUDE.md  CLUSTER-INTEGRATION.md  PROJECT-DEVELOPMENT-PHASE-TRACKING.md  PROJECT-detail.md  README.md  SECOND-KNOWLEDGE-BRAIN.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/superpowers/plans/: 2026-06-23-complete-all-phases.md
skills/: main.md  sub-disease-diagnoser.md  sub-evaluation-framework-selector.md  sub-improvement-roadmap.md  sub-remote-sensing-analyzer.md  sub-requirements-gatherer.md  sub-scoring-engine.md
src/crop_yield_disease_diagnosis/: __init__.py  crop_model.py  data_sources.py  diagnoser.py  disease_library.py  harness.py  indices.py  phenology.py  recommendation.py  scoring.py  types.py
tests/: conftest.py  test-scenarios.md  test_diagnoser.py  test_harness.py  test_indices.py  test_knowledge_updater.py  test_phenology.py  test_recommendation.py  test_scoring.py
tools/: knowledge_updater.py
